[workspace]
members = [
    "four-q-rs",
    "qubic-web3-rs",
    "qubic-types",
    "qubic-tcp-types",
    "qubic-rpc-types",
    "qubic-rpc",
    "vanity-id-generator",
    "qubic-spectrum"
]
resolver = "2"

[workspace.package]
version = "0.2.0"

[profile.dev]
overflow-checks = false

[profile.release]
strip = true
