[package]
name = "qubic-rpc-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
qubic-types = { path = "../qubic-types", features = ["serde"]}
qubic-tcp-types = { path = "../qubic-tcp-types" }
hex = "*"