[package]
name = "qubic-rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qubic-rs = { path = "../qubic-rs", default-features = false, features = ["async"]}
axum = { version = "0.8.1", features = ["macros", "query"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
hex = "*"
log = "*"
env_logger = "*"
tower-http = { version = "0.5", features = ["cors"]}
clap = { version = "4.4.7", features = ["derive"]}
crossbeam-channel = "*"
rand = "0.9.0"
anyhow = "1.0.95"
http = "1.2.0"
serde_json = "*"
base64 = "0.22.1"
tower = "0.5.2"
reqwest = "*"
http-body-util = "0.1.2"

[dev-dependencies]
reqwest = { version= "*", features = ["rustls", "json"]}
serde_json = "*"

[features]
default = ["serde", "qubic-rs/std"]
serde = ["qubic-rs/serde"]
wasm = ["qubic-rs/wasm"]
