[package]
name = "qubic-web3-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "*", default-features = false, optional = true}
kangarootwelve = "0.1.2"
tokio = { version = "*", features = ["full"]}
socket2 = "*"
anyhow = "*"
serde = { version = "*", features = ["derive"]}
async-trait = "*"
thiserror-no-std = { version = "*" }
thiserror = { version = "*", optional = true }
four-q = { path = "../four-q-rs" }
tiny-keccak = { version = "2.0", default-features = false, features = ["k12"]}
serde = { version = "*", default-features = false, features = ["derive"]}
ethereum-types = { version = "0.14.1", default-features = false}
hex = { version = "*", default-features = false, features = ["serde"]}
getrandom = { version = "*", features = ["js"], optional = true}

[dev-dependencies]
crossbeam-channel = "*"
hex = "*"

[features]
default = ["serde", "std"]
serde = []
std = ["serde/default", "hex/default", "ethereum-types/default", "dep:thiserror", "rand/default", "dep:rand"]
wasm = ["dep:getrandom"]
http = []
async = ["http"]