[package]
name = "qubic-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
four-q = { path = "../four-q-rs" }
kangarootwelve = "0.1.2"
serde = { version = "*", features = ["derive"]}
ethereum-types = "0.14.1"
hex = "*"

[features]
serde = []