[package]
name = "qubic-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror-no-std = "*"
four-q = { path = "../four-q-rs" }
tiny-keccak = { version = "2.0", default-features = false, features = ["k12"]}
serde = { version = "*", default-features = false, features = ["derive"]}
ethereum-types = { version = "0.14.1", default-features = false}
hex = { version = "*", default-features = false, features = ["serde"]}

[features]
default = ["serde"]
serde = []