[package]
name = "vanity-id-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qubic-types = { path = "../qubic-types" }
rand = "*"
crossbeam-channel = "*"
log = "*"
env_logger = "*"
structopt = "*"
itertools = "*"