[package]
name = "vanity-id-generator"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qubic-rs = { path = "../qubic-rs" }
rand = "*"
crossbeam-channel = "*"
log = "*"
env_logger = "*"
clap = { version = "4.4.7", features = ["derive"]}
itertools = "*"